<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spectop14121901</string>
    <string name="tittle">登  录</string>
    <string name="action_settings">Settings</string>
    <string name="information_return"></string>
    <string name="reg">还没有帐号? 点此注册!</string>
    <string name="log_In">登录</string>
    <string name="pass_In">请输入密码</string>
    <string name="usrname_In">请输入用户名</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
